# DURIN

./: .gitignore  Mapeamento de Rede.xlsx  README.md  durin-rede.drawio  teste.rar
Gerar relatórios no AD/adrt/: ad-computers.ps1  ad-users.ps1
Gerar relatórios no AD/adrt/config/: config.txt
contadores/: aula-youtube.py  pega_contador.py  teste.py  view.py
contadores-web/: package-lock.json  package.json  tailwind.config.ts
contadores-web/app/: ProgressUpdater.tsx  layout.tsx  page.tsx
contadores/agora-vai/: carga.py  docker-compose.yaml
contadores/agora-vai/api/: Dockerfile  db.db  push.http  pyproject.toml
contadores/agora-vai/api/api/: __init__.py  database.py  models.py  push_router.py  repositories.py  routes.py  ws.py
contadores/agora-vai/api/api/services/: get_multifuncional.py  get_zebra.py
contadores/agora-vai/app/: Dockerfile  pubspec.yaml
contadores/agora-vai/db/: contadores.db  teste.db
contadores/backend-flask/: atualiza_impressoras.py  carga_dados.py  run.py
contadores/backend-flask/api/: __init__.py  endpoints.py
contadores/backend-flask/app/: __init__.py
contadores/service/: enviar_email.py
contadores/src/data/: impressoras.json
contadores/src/functions/: gravar_contador_html.py  ler_contador_zebra.py  obter_impressoras_multifuncionais.py  obter_impressoras_zebra.py
contadores/versao-poo/src/: multifuncional.py  (+2 more)
contadores_multifuncionais/: main.py
contadores_to_xlsx/: main.py
contadores_zebra/: contador.txt  cria_txt.py  le_contadores.py  main.py
contadores_zebra/service/: enviar_email.py
manipular_pdf/: main.py
(+172 files in other folders)
